--- a/tests/IRDFEnvironmentTest.html
+++ b/tests/IRDFEnvironmentTest.html
@@ -161,7 +161,7 @@ function testImportProfileFromGraph() {
     
     // First the nodes.
     var termNode = env.createBlankNode();
-    var rdfaTerm = env.createNamedNode('http://www.w3.org/ns/rdfa#keyword');
+    var rdfaTerm = env.createNamedNode('http://www.w3.org/ns/rdfa#term');
     var termLiteral = env.createLiteral('term');
     var termIRINode = env.createNamedNode('http://www.example.com/term');
     
