--- a/tests/indexedRDFTestSuite.html
+++ b/tests/indexedRDFTestSuite.html
@@ -15,7 +15,7 @@ function suite() {
     suite.addTestPage('../tests/IRDFProfileTest.html');
 
     suite.addTestPage('../tests/IRDFBlankNodeTest.html');
-//    suite.addTestPage('../tests/IRDFNamedNodeTest.html');
+    suite.addTestPage('../tests/IRDFNamedNodeTest.html');
 //    suite.addTestPage('../tests/IRDFLiteralTest.html');
 //    suite.addTestPage('../tests/IRDFGraphLiteralTest.html');
 
