Add Literal support (but not automatic type conversion yet)

--- a/tests/indexedRDFTestSuite.html
+++ b/tests/indexedRDFTestSuite.html
@@ -16,7 +16,7 @@ function suite() {
 
     suite.addTestPage('../tests/IRDFBlankNodeTest.html');
     suite.addTestPage('../tests/IRDFNamedNodeTest.html');
-//    suite.addTestPage('../tests/IRDFLiteralTest.html');
+    suite.addTestPage('../tests/IRDFLiteralTest.html');
 //    suite.addTestPage('../tests/IRDFGraphLiteralTest.html');
 
 //    suite.addTestPage('../tests/IRDFTripleTest.html');
