Bugfixes based on node unit tests.

--- a/tests/IRDFBlankNodeTest.html
+++ b/tests/IRDFBlankNodeTest.html
@@ -63,6 +63,7 @@ function testEquals() {
     assert(!bnode1.equals(bnode2));
     assert(!bnode2.equals(bnode1));
     // What about two different environments?
+    // TODO: Test with strings and other values.
 }
 //]]>
 </script>
