--- a/tests/IRDFLiteralTest.html
+++ b/tests/IRDFLiteralTest.html
@@ -131,6 +131,7 @@ function testEquals() {
     assert(dtLiteral2.equals(dtLiteral));
     assert(langDtLiteral.equals(langDtLiteral2));
     assert(langDtLiteral2.equals(langDtLiteral));
+    // TODO: Test with strings and other values.
 }
 //]]>
 </script>
