--- a/tests/IRDFNamedNodeTest.html
+++ b/tests/IRDFNamedNodeTest.html
@@ -67,6 +67,7 @@ function testEquals() {
     assert(node3.equals(node1));
     assert(!node2.equals(node3));
     assert(!node3.equals(node2));
+    // TODO: Test with strings and other values.
 }
 //]]>
 </script>
