Add support for Triple objects.

--- a/tests/indexedRDFTestSuite.html
+++ b/tests/indexedRDFTestSuite.html
@@ -19,7 +19,7 @@ function suite() {
     suite.addTestPage('../tests/IRDFLiteralTest.html');
 //    suite.addTestPage('../tests/IRDFGraphLiteralTest.html');
 
-//    suite.addTestPage('../tests/IRDFTripleTest.html');
+    suite.addTestPage('../tests/IRDFTripleTest.html');
 //    suite.addTestPage('../tests/IRDFGraphTest.html');
 
 //    suite.addTestPage('../tests/IRDFTripleFilterTest.html');
