--- a/tests/indexedRDFTestSuite.html
+++ b/tests/indexedRDFTestSuite.html
@@ -22,9 +22,7 @@ function suite() {
     suite.addTestPage('../tests/IRDFTripleTest.html');
 //    suite.addTestPage('../tests/IRDFGraphTest.html');
 
-//    suite.addTestPage('../tests/IRDFTripleFilterTest.html');
-//    suite.addTestPage('../tests/IRDFTripleCallbackTest.html');
-//    suite.addTestPage('../tests/IRDFTripleActionTest.html');
+    suite.addTestPage('../tests/IRDFTripleActionTest.html');
     
     return suite;
 }
