Add tests for IRDFTripleAction (untested?), and an implementation of IRDFGraph (excluding persistence tests).

--- a/tests/indexedRDFTestSuite.html
+++ b/tests/indexedRDFTestSuite.html
@@ -20,7 +20,7 @@ function suite() {
 //    suite.addTestPage('../tests/IRDFGraphLiteralTest.html');
 
     suite.addTestPage('../tests/IRDFTripleTest.html');
-//    suite.addTestPage('../tests/IRDFGraphTest.html');
+    suite.addTestPage('../tests/IRDFGraphTest.html');
 
     suite.addTestPage('../tests/IRDFTripleActionTest.html');
     
