--- a/tests/IRDFTermMapTest.html
+++ b/tests/IRDFTermMapTest.html
@@ -157,7 +157,7 @@ function testImportFromGraph() {
     // First the nodes.
     var termNode = env.createBlankNode();
     var rdfaTerm = env.createNamedNode('http://www.w3.org/ns/rdfa#term');
-    var termLiteral = env.createLiteral('t');
+    var termLiteral = env.createLiteral('term');
     var termIRINode = env.createNamedNode('http://www.example.com/term');
 
     var rdfaURI = env.createNamedNode('http://www.w3.org/ns/rdfa#uri');
