--- a/tests/indexedRDFTestSuite.html
+++ b/tests/indexedRDFTestSuite.html
@@ -17,7 +17,7 @@ function suite() {
     suite.addTestPage('../tests/IRDFBlankNodeTest.html');
     suite.addTestPage('../tests/IRDFNamedNodeTest.html');
     suite.addTestPage('../tests/IRDFLiteralTest.html');
-//    suite.addTestPage('../tests/IRDFGraphLiteralTest.html');
+    suite.addTestPage('../tests/IRDFGraphLiteralTest.html');
 
     suite.addTestPage('../tests/IRDFTripleTest.html');
     suite.addTestPage('../tests/IRDFGraphTest.html');
